# Biztrack

./: .easignore  .gitignore  MIGRATION_PLAN.md  REMAINING_CQRS_REFACTORING_TASKS.md  Secret.env.here.txt  backend-structure.md  commands.txt  ecosystem.config.js  package-lock.json  service-account.json
backend/: .env.example  .gitignore  add_all_permissions.py  add_permissions.py  client_secrets.json  debug_migration.py  migrate_add_discount_amount.py  migrate_add_items_column.py  migrate_invoice_items_data.py  pyproject.toml  requirements.txt  start.sh  test_inventory_routes.py
desktop/: .gitignore  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
frontend/: .env  .eslintignore  .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  tsconfig.json
mobile/: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  App.tsx  app.config.js  app.json  babel.config.js  eas.json  env.example  package-lock.json  package.json  tailwind.config.js
new-backend/: .env.example  .gitignore  pyproject.toml
new-backend/alembic/: env.py
new-backend/alembic/versions/: 325081e03cc3_create_users_table.py  97aaef44fd0c_add_tenants_and_tenant_members.py
new-backend/app/: config.py  db.py  logging_config.py  main.py
new-backend/app/api/: routes.py
new-backend/app/features/auth/: api.py  dependencies.py  logic.py  schemas.py
new-backend/app/features/tenants/: api.py  constants.py  logic.py  router.py  schemas.py
new-backend/app/models/: __init__.py  entity.py  tenant.py  user.py
new-backend/app/repositories/: tenant.py  user.py
new-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: deploy-backend-uv.sh  deploy.sh  ensure-uv.sh  run-migrations.sh  (+1 more)
(+2955 files in other folders)
