[project]
name = "new-backend"
version = "0.1.0"
description = "Biztrack SaaS API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "email-validator>=2.2",
    "fastapi[standard]>=0.115",
    "itsdangerous>=2.2",
    "bcrypt>=4.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.uv]
dev-dependencies = [
    "httpx>=0.28",
    "ruff>=0.8",
]
