[package]
name = "biztrack-desktop"
version = "1.0.0"
description = "BizTrack desktop shell"
authors = ["BizTrack"]
edition = "2021"

[lib]
name = "biztrack_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
